spec/e2e/unexpected_character.lit
# error: [line 3] Error: Unexpected character '^'
# error: [line 3] Error at "b": I was expecting a ')' after the arguments.
foo(a ^ b);
